test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-server
  namespace: test-nodejs
spec:
  replicas: 100
  selector:
    matchLabels:
      app: nodejs-server
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nodejs-server
    spec:
      containers:
      - name: nodejs
        image: trace.risingstack.com/myapp:v1
        ports:
        - containerPort: 8080
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 2
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 20"]
        resources:
          limits:
            memory: "512Mi"
            cpu: "1"
