test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-node-js
  namespace: test-nodejs
spec:
  ingressClassName: nginx
  rules:
  - host: test-nodejs.example.com
    http:
      paths:
      - backend:
          service:
            name: nodejs-service
            port:
              number: 80
        path: /
        pathType: Prefix
