test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: test-nodejs
spec:
  selector:
    app: nodejs-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
